# r_klipp

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build_matrix.yml  ci.yml
boards/mks_skipr/: flash-via-probe.md  flash-via-sd.md  memory_skipr.x  pinout.md  sd_image_layout.md
boards/pi_ts35/: panel_config.md
boards/tests/: board_docs_check.sh
config/: tiers.rs
crates/actors/: Cargo.toml
crates/automation/: Cargo.toml
crates/comms/: Cargo.toml
crates/compat-layer/: Cargo.toml  README.md
crates/control/: Cargo.toml
crates/control/src/: lib.rs  motion_pid.rs
crates/firmware-builder/: Cargo.toml  README.md
crates/firmware-builder/src/: main.rs
crates/hal/: Cargo.toml
crates/hal/src/: adc.rs  can.rs  capabilities.rs  dma.rs  dma_abstraction.rs  gpio.rs  lib.rs  pwm.rs  spi.rs  timer.rs  timer_abstraction.rs  traits.rs  uart.rs
crates/hal/src/emerging/: bit_bang.rs  mod.rs
crates/hal/src/infineon/: mod.rs
crates/hal/src/infineon/psoc6/: mod.rs
crates/hal/src/microchip/sam/: mod.rs  sam_impl.rs
crates/hal/src/nxp/: mod.rs
crates/hal/src/nxp/kinetis/: ftm.rs  mod.rs
crates/hal/src/nxp/lpc17xx/: gpio.rs  mod.rs  timers.rs
crates/hal/src/nxp/mcx/: mod.rs
crates/hal/src/renesas/: mod.rs
crates/hal/src/renesas/re01/: mod.rs
crates/hal/src/stm32/: adc.rs  adc_impl.rs  can.rs  clocks.rs  dma.rs  encoder_impl.rs  gpio.rs  math_accel.rs  mod.rs  pwm.rs  spi.rs  step_gen.rs  timer.rs  tmc_comms.rs  uart.rs
crates/hal/src/ti/: mod.rs
crates/hal/src/ti/tiva/: mod.rs  tiva_impl.rs
crates/io/: Cargo.toml
crates/kinematics/: Cargo.toml
crates/klipper-host/: Cargo.toml  README.md
crates/klipper-host/examples/: connect_emulator.rs
crates/klipper-host/src/: api.rs  batch.rs  board_support.rs  config.rs  firmware_support.rs  gcode.rs  hil_analyzer.rs  host_support.rs  kinematics.rs  lib.rs  macro_engine.rs  main.rs  mcu_client.rs  state.rs  virtual_printer.rs
crates/klipper-host/tests/: integration.rs  protocol_compatibility.rs
crates/klipper-mcu-firmware/: Cargo.toml  Makefile  README.md  build.rs  memory.x
crates/klipper-mcu-firmware/.cargo/: config.toml
crates/klipper-mcu-firmware/boards/stm32f407/: pins.rs
crates/klipper-mcu-firmware/examples/: led_toggle.rs
crates/klipper-mcu-firmware/src/: adc.rs  clock_sync.rs  embassy_main.rs  fixed_point.rs  heater.rs  main.rs  proto_bridge.rs  rtic_main.rs  safety.rs  stepper.rs  task_spawner.rs  transport.rs
crates/klipper-mcu-firmware/test/: heater_tests.rs  safety_tests.rs
crates/klipper-proto/: Cargo.toml  README.md
crates/klipper-proto/benches/: codec_benchmark.rs  parser_benchmark.rs
crates/klipper-proto/examples/: roundtrip.rs
crates/klipper-proto/src/: autoconfig.rs  clock_sync.rs  codec.rs  commands.rs  crc.rs  io.rs  lib.rs  parser.rs  registry.rs
crates/klipper-proto/tests/: protocol_parser_tests.rs  protocol_tests.rs
crates/libs/r_klipp_api/: Cargo.toml
crates/libs/r_klipp_api/benches/: serialization_benchmark.rs
crates/libs/r_klipp_api/src/: hal.rs  lib.rs
crates/libs/r_klipp_safety/: Cargo.toml
crates/libs/r_klipp_safety/src/: lib.rs
crates/mcu-drivers/: Cargo.toml  README.md  stepper.rs
crates/mcu-drivers/benches/: stepper_benchmark.rs
crates/mcu-drivers/driver-drv8825/: Cargo.toml  README.md
crates/mcu-drivers/driver-drv8825/src/: lib.rs
crates/mcu-drivers/driver-endstop/: Cargo.toml  README.md
crates/mcu-drivers/driver-endstop/src/: lib.rs
crates/mcu-drivers/driver-thermistor/: Cargo.toml  README.md
crates/mcu-drivers/driver-thermistor/src/: lib.rs
crates/mcu-drivers/driver-tmc/: Cargo.toml  README.md
crates/mcu-drivers/driver-tmc/src/: lib.rs  tmc2208.rs  tmc2209.rs
crates/mcu-drivers/examples/: stepper_example.rs
crates/mcu-drivers/src/: lib.rs  probe.rs  stepper.rs  stepper_dma.rs
crates/motion/: Cargo.toml  README.md
crates/motion/benches/: benchmarks.rs  planner_benchmark.rs  real_time_perf.rs
crates/motion/examples/: simulate.rs 
crates/motion/src/: error.rs  g4_planner.rs  homing.rs  kinematics.rs  lib.rs  motion_tuner.rs  ph_beziers.rs  planner.rs  profile.rs  ptp_profile.rs  shaper.rs  smart_controller.rs  tuner_trait.rs  upgraded_tuner.rs
crates/motion/src/actors/: mod.rs  motion_actor.rs  thermal_actor.rs
crates/motion/tests/: determinism_test.rs  smart_controller_tests.rs  stress_tests.rs
crates/motors/: Cargo.toml
crates/motors/src/: lib.rs  stepper.rs  traits.rs  voice_coil.rs
crates/motors/src/drivers/: tmc.rs
crates/motors/src/foc/: mod.rs
crates/motors/src/servo/: cia402.rs  mod.rs
crates/parser/: Cargo.toml
crates/parser/src/: ast.rs  dialect.rs  lexer.rs  lib.rs  modal.rs  stream.rs
crates/safety/: Cargo.toml
crates/sim/: Cargo.toml  README.md
crates/thermal/: Cargo.toml  README.md
crates/thermal/examples/: thermal_sim.rs
crates/thermal/src/: filter.rs  lib.rs  mpc.rs  pid.rs  safety.rs  thermistor.rs
crates/thermal/tests/: tests.rs
crates/tools/: Cargo.toml
docs/: CODE_OF_CONDUCT.md  SAFETY_NOTICE.md  architectural_analysis.md  architecture.md  changelog.md  contributors.md  dev_workflow.md  diagram.md  hardware_setup.md  hil_testing.md  profiling.md  protocol.md  r_klipp_implementation_details.md  safety.md
host-server/: Cargo.toml
host-server/src/: main.rs
host-server/src/api/: mod.rs
host-server/src/bridge/: mod.rs
host-server/src/db/: mod.rs  models.rs
host-ui/: Cargo.toml  build.rs
host-ui/src/: lib.rs  main.rs
host-ui/ui/: main.slint
motion/: adaptive_feedrate.rs  advanced_blending.rs  motion_tuner.rs  ptp_profile.rs  smart_controller.rs  spline_planner.rs  trochoidal.rs  tuner_trait.rs  vibration_damping.rs
motion/actors/: kinematics_solver.rs
motion/calibration/: compensation.rs  identification.rs  volumetric_map.rs
motion/interpolation/: feedrate_c3.rs  newton_raphson.rs  nurbs_realtime.rs
motion/kinematics/: conveyor_tracking.rs  dls_ik.rs  five_axis_feedrate.rs  five_axis_rtcp.rs  five_axis_smoothing.rs  hessian.rs  jacobian.rs  nullspace.rs  poe_fk.rs  singularity.rs  (+3 more)
src/: lib.rs  main.rs
(+156 files in other folders)
