[package]
name = "host-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
slint = "1.5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"

# slintcn will be added here as a path dependency
# slintcn = { path = "../slintcn" }

[build-dependencies]
slint-build = "1.5"
