[package]
name = "control"
version = "0.1.0"
edition = "2021"

[dependencies]
micromath = "0.1.0"
heapless = "0.7.16"
embassy-executor = { version = "0.6.0", features = ["nightly", "integrated-timers"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt"] }

[dev-dependencies]
approx = "0.5.1"