[package]
name = "hal"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { version = "1.0.0", package = "rustc-std-workspace-core" }
futures = { version = "0.3.28", default-features = false, features = ["async-await"] }
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "stm32f407vg",
    "memory-x",
    "time-driver-any",
    "exti",
    "unstable-pac",
] }
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"

[features]
stm32f1 = []
stm32f2 = []
stm32f4 = []
stm32g0 = []
stm32l4 = []
stm32wb = []
stm32c0 = []
