[package]
name = "klipper-host"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4"
anyhow = "1"
configparser = "3"
parking_lot = "0.12"
clap = { version = "4.5.49", features = ["derive"] }
rand = "0.8"
rhai = "1.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5"
tracing = "0.1"