[package]
name = "klipper-mcu-firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.6.0", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "defmt"] }
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f407vg", "time-driver-tim5", "exti"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-hal = "1.0"
embedded-hal-async = "1.0"
fixed = "=1.29.0"
futures = { version = "0.3", default-features = false }
heapless = "0.8"
libm = "0.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.2", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "2.1", features = ["cortex-m-systick"] }
stm32f4xx-hal = { version = "0.23", features = ["stm32f407"] }
stm32-metapac = { version = "15.0.0", features = ["stm32f407vg", "rt"] }
mcu-drivers = { path = "../mcu-drivers" }

[features]
default = ["embassy-rt", "defmt"]
embassy-rt = []
defmt = []