[package]
name = "klipper-proto"
version = "0.1.0"
edition = "2021"
authors = ["Faez Barghasa <faez.barghasa.org@gmail.com>"]
description = "A canonical Rust implementation of the Klipper host <-> MCU messaging protocol."
license = "MIT"
readme = "README.md"
keywords = ["klipper", "3dprinting", "mcu", "no_std"]
categories = ["embedded", "network"]

[features]
default = ["std"]
# Enables functionality dependent on the standard library
std = ["alloc", "tokio-util/codec", "thiserror", "bytes", "tokio", "futures"]
# Enables use of dynamic memory allocation in `no_std` environments
alloc = ["postcard/alloc"]


[dependencies]
postcard = { version = "1.1.3", default-features = false, features = ["use-std"] }
heapless = { workspace = true, features = ["serde"] }
bytes = { version = "1.10.1", optional = true }
thiserror = { version = "1.0.63", optional = true }
serde = { workspace = true }
nom = { version = "7.1.3", default-features = false }
tokio-util = { version = "0.7.16", features = [], optional = true }
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "codec_benchmark"
harness = false

