[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = { version = "7.1.3", default-features = false }
heapless = "0.7.16"
micromath = "0.1.0"
hal = { path = "../hal" }
comms = { path = "../comms" }
embassy-time = { version = "0.3.2", features = ["defmt"] }
lexical-core = { version = "0.8.5", default-features = false }

[dev-dependencies]
approx = "0.5.1"