[package]
name = "thermal"
version = "0.1.0"
edition = "2021"
authors = ["Faez Barghasa <faez.barghasa.org@gmail.com>"]
description = "A library for thermal management including thermistors, PID controllers, filters, and safety features for embedded and host systems."
license = "MIT OR Apache-2.0"
keywords = ["pid", "thermistor", "embedded", "no_std", "thermal"]
categories = ["embedded", "no-std", "science"]

[features]
default = ["std"]
std = ["num-traits/std"]
serde = ["dep:serde", "fixed/serde"]

[dependencies]
num-traits = { version = "0.2", default-features = false }
fixed = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.8.2" # For benchmarking if needed later
float-cmp = "0.10.0"
rand = "0.10.1"


