[package]
name = "r_klipp_api"
version = "0.1.0"
edition = "2021"

[dependencies]
postcard = { version = "1.0.8", features = ["use-std"] }
serde = { version = "1.0.197", features = ["derive"] }
heapless = "0.8.0"
embedded-hal-async = "1.0.0"
fixed = { version = "1.23.1", features = ["serde"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "serialization_benchmark"
harness = false