[package]
name = "r_klipp_safety"
version = "0.1.0"
edition = "2021"

[dependencies]
r_klipp_api = { path = "../r_klipp_api" }
heapless = "0.8.0"
micromath = "2.1.0"
fixed = { version = "1.23.1", features = ["serde"] }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime"] }

[features]
default = []
std = []