[package]
name = "driver-endstop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A no_std driver for reading digital endstop/limit switch inputs."


[dependencies]
embedded-hal = { workspace = true }

[dev-dependencies]
embedded-hal-mock = { workspace = true }

[features]
default = []
std = []

