
[package]
name = "driver-thermistor"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A no_std NTC thermistor temperature conversion library."


[dependencies]
embedded-hal = { workspace = true }
num-traits = { workspace = true }
fixed = { workspace = true }

[dev-dependencies]
# Used for testing against reference curves
csv = "1.3.0"
serde = { version = "1.0.197", features = ["derive"] }

[features]
default = []
# Enable `std` for host-based tests that might use file I/O
std = ["fixed/std"]
# Enable fixed-point arithmetic support
fixed = ["dep:fixed"]
